[tool.poetry]
name = "sp-dash-components"
version = "0.1.0"
description = ""
authors = ["Alex Hsu <alex.hsu@spglobal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dash = "2.17.1"
dash-mantine-components = "0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
